[gd_scene load_steps=12 format=3 uid="uid://dugy5qie6lpek"]

[ext_resource type="Script" uid="uid://b7wa4sxq6ox2f" path="res://scripts/spinning_project.gd" id="1_oy8k2"]
[ext_resource type="Texture2D" uid="uid://x0xywg1ijdvs" path="res://sprites/General Tiles/Fruit+.png" id="2_mrwva"]
[ext_resource type="Texture2D" uid="uid://6u5r73x2prn5" path="res://sprites/General Tiles/FruitUpSideDown.png" id="3_8amnf"]
[ext_resource type="Texture2D" uid="uid://csagckyo08oxt" path="res://sprites/General Tiles/FruitMirror.png" id="4_8aq4w"]

[sub_resource type="CircleShape2D" id="CircleShape2D_njpw1"]
radius = 4.12311

[sub_resource type="AtlasTexture" id="AtlasTexture_cjyle"]
atlas = ExtResource("2_mrwva")
region = Rect2(368, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_x28yy"]
atlas = ExtResource("2_mrwva")
region = Rect2(368, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cd2oe"]
atlas = ExtResource("3_8amnf")
region = Rect2(368, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ndxt5"]
atlas = ExtResource("4_8aq4w")
region = Rect2(224, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cfk5k"]
atlas = ExtResource("4_8aq4w")
region = Rect2(224, 32, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_cjyle"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cjyle")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x28yy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cd2oe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ndxt5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cfk5k")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="SpinningTomato" type="Area2D" groups=["LethalArea"]]
z_index = 1
collision_layer = 16
collision_mask = 3
script = ExtResource("1_oy8k2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_njpw1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.570312, 0.570312)
sprite_frames = SubResource("SpriteFrames_cjyle")
autoplay = "default"
frame_progress = 0.312359

[node name="SelfDestructTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="SelfDestructTimer" to="." method="_on_self_destruct_timer_timeout"]
